services/busyboxplus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busyboxplus
spec:
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    args:
    - sleep
    - "1000"
